Fix scrollbar issue by hiding overflow on sidebar

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -13,7 +13,7 @@
 /* Blocks */
 
 :root {
-  font-size: 1.25rem
+  font-size: 1.25rem;
 }
 
 body {
@@ -34,6 +34,7 @@ main {
 .sideBar {
   width: clamp(200px, 25vw, 603px);
   height: 100%;
+  overflow: hidden;
 }
 
 .sideImage {
